backend/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: tabimworld-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
    - hosts:
        - cms-staging.tabimworld.com
      secretName: backend-tls
  rules:
    - host: cms-staging.tabimworld.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 1337
